9847
This lies at the dark heart of {{Typer#adapt}}, {{insertApply}}. {{Predef.any2StringAdd}} seems to be a passenger on the ride.

Notice below we get the error reported if we manually write {{apply}}

{code}
scala> import reflect.macros.Context, language.experimental._
import reflect.macros.Context
import language.experimental._

scala>  def impl(c: Context) = { c.error(c.macroApplication.pos, "."); c.literal("") }
impl: (c: scala.reflect.macros.Context)c.Expr[String]

scala> def m = macro impl
defined term macro m: String

scala> m.apply()
<console>:14: error: .
              m.apply()
              ^

scala> m()
java.lang.NullPointerException
{code}
